Fixes Alignment

--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,8 @@
           box-sizing: content-box;
 }
 
-.main, html, body {
-    width:100%;
-    height:100%;
-    margin:0;
-    padding:0;
-    -webkit-box-sizing: initial;
-    -moz-box-sizing: initial;
-    box-sizing: initial;
+:root {
+  --boxmargin: 20px;
 }
 
 .w3-modal {
@@ -108,16 +102,6 @@ h2 {
   font-family: "Arial Black", Gadget, sans-serif;
 }
 
-.menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 20px;
-  width: 200px;
-  background-color: #f1f1f1;
-  height: 100%; /* Full height */
-  position: fixed; /* Make it stick, even on scroll */
-}
-
 a:link, a:visited {
   background-color: #F1F1F1;
   color: Black;
@@ -132,53 +116,65 @@ a:hover, a:active {
   background-color: #ECECEC;
 }
 
+.main, html, body {
+  position: fixed;
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+  -webkit-box-sizing: initial;
+  -moz-box-sizing: initial;
+  box-sizing: initial;
+}
+
+.menu {
+  position: absolute;
+  padding: 20px;
+  width: 200px;
+  height: calc(100% - 40px);
+  background-color: #f1f1f1;
+  list-style-type: none;
+}
+
 .body {
-  position:fixed;
-  top: 0;
+  position: fixed;
   left: 240px;
-  right: 0px;
-  height: 100%;
+  height: calc(100% - var(--boxmargin));
+  width: calc(100% - 240px - var(--boxmargin));
+  padding: calc(var(--boxmargin)/2);
 }
 
-.split-top {
-  height: calc(50% - 90px);
-  padding: 60px 0px 30px 0px;
+.vertical-split {
+  height:50%;
 }
 
-.split-bottom {
-  height: calc(50% - 90px);
-  padding: 30px 0px 60px 0px;
+.box-1 {
+  margin: calc(var(--boxmargin)/2);
+  height: calc(50% - 3*var(--boxmargin)/2);
+  width: calc(33.3333333% - 3*var(--boxmargin)/2);
+  background-color: white;
+  box-shadow: 0px 0px 3px 3px #E8E8E8;
+}
+
+.box-2 {
+  margin: calc(var(--boxmargin)/2);
+  height: calc(50% - 3*var(--boxmargin)/2);
+  width: calc(66.6666666% - 7*var(--boxmargin)/4);
+  background-color: white;
+  box-shadow: 0px 0px 3px 3px #E8E8E8;
 }
 
 .column-left {
-  width: calc(33.3333333% - 90px);
-  padding: 0px 30px 0px 60px;
-  left: 0;
+  left: calc(var(--boxmargin)/2);
   position: absolute;
-    height: calc(50% - 90px);
-  background-color: white;
 }
 .column-center {
-  width: calc(33.3333333% - 60px);
-  margin-left: 33.3333333%;
-  padding: 0px 30px 0px 30px;
+  margin-left: calc(33.3333333% + var(--boxmargin)/4);
   position: absolute;
-  height: calc(50% - 90px);
-  background-color: white;
 }
 .column-right {
-  width: calc(33.3333333% - 90px);
-  padding: 0px 60px 0px 30px;
-  right: 0;
+  right: calc(var(--boxmargin)/2);
   position: absolute;
-  height: calc(50% - 90px);
-  background-color: white;
-}
-
-.box {
-  height: 100%;
-  width: 100%;
-  box-shadow: 0px 0px 3px 3px #E8E8E8;
 }
 
 .invest {
